Add simple messaging

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       dockerfile: ./docker/receiver.Dockerfile
       target: app
     image: renkman/receiver
+    container_name: receiver
     links:
       - nats
     depends_on:
@@ -31,6 +32,9 @@ services:
       dockerfile: ./docker/webapi.Dockerfile
       target: app
     image: renkman/webapi
+    container_name: webapi
+    ports:
+      - 8080:8080
     links:
       - nats
     depends_on:
@@ -40,9 +44,12 @@ services:
 
   nats:
     image: nats:alpine3.20
+    container_name: nats
     hostname: nats
     ports:
       - "4222:4222"
+    networks:
+      - natsnetwork
 
 networks:
   natsnetwork:
