--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -36,7 +36,9 @@ services:
     image: renkman/webapi
     container_name: webapi
     environment:
-      -NATS_URL: nats://nats:4222
+      - ASPNETCORE_ENVIRONMENT=Development
+      - DOTNET_ENVIRONMENT=Development
+      - NATS__URL=nats://nats:4222
     ports:
       - 8080:8080
     links:
